[gd_scene load_steps=17 format=2]

[ext_resource path="res://addons/godot_film_maker/recorder.gd" type="Script" id=1]
[ext_resource path="res://addons/godot_film_maker/textures/play_btn.png" type="Texture" id=2]
[ext_resource path="res://addons/godot_film_maker/textures/pause_btn.png" type="Texture" id=3]
[ext_resource path="res://addons/godot_film_maker/textures/stop_btn.png" type="Texture" id=4]
[ext_resource path="res://addons/godot_film_maker/textures/rec_btn.png" type="Texture" id=5]
[ext_resource path="res://addons/godot_film_maker/textures/settings_btn.png" type="Texture" id=6]

[sub_resource type="StyleBoxEmpty" id=1]

[sub_resource type="StyleBoxEmpty" id=2]

[sub_resource type="StyleBoxEmpty" id=3]

[sub_resource type="StyleBoxEmpty" id=4]

[sub_resource type="StyleBoxEmpty" id=5]

[sub_resource type="StyleBoxEmpty" id=6]

[sub_resource type="StyleBoxEmpty" id=7]

[sub_resource type="StyleBoxEmpty" id=8]

[sub_resource type="StyleBoxEmpty" id=9]

[sub_resource type="StyleBoxEmpty" id=10]

[node name="RecorderScn" type="CanvasLayer"]
pause_mode = 2
layer = 128
script = ExtResource( 1 )

[node name="Controls" type="Control" parent="."]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -175.0
margin_top = -72.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="Controls"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.145098 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="buttons" type="HBoxContainer" parent="Controls"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="rec_button" type="Button" parent="Controls/buttons"]
margin_right = 40.0
margin_bottom = 72.0
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 2 )
custom_styles/focus = SubResource( 3 )
custom_styles/disabled = SubResource( 4 )
custom_styles/normal = SubResource( 5 )
icon = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="stop_button" type="Button" parent="Controls/buttons"]
margin_left = 44.0
margin_right = 84.0
margin_bottom = 72.0
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 2 )
custom_styles/focus = SubResource( 3 )
custom_styles/disabled = SubResource( 4 )
custom_styles/normal = SubResource( 5 )
icon = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="play_button" type="Button" parent="Controls/buttons"]
margin_left = 88.0
margin_right = 128.0
margin_bottom = 72.0
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 2 )
custom_styles/focus = SubResource( 3 )
custom_styles/disabled = SubResource( 4 )
custom_styles/normal = SubResource( 5 )
icon = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="pause_button" type="Button" parent="Controls/buttons"]
margin_left = 132.0
margin_right = 172.0
margin_bottom = 72.0
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 2 )
custom_styles/focus = SubResource( 3 )
custom_styles/disabled = SubResource( 4 )
custom_styles/normal = SubResource( 5 )
icon = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="settings_button" type="Button" parent="Controls/buttons"]
margin_left = 176.0
margin_right = 216.0
margin_bottom = 72.0
custom_styles/hover = SubResource( 6 )
custom_styles/pressed = SubResource( 7 )
custom_styles/focus = SubResource( 8 )
custom_styles/disabled = SubResource( 9 )
custom_styles/normal = SubResource( 10 )
icon = ExtResource( 6 )

[node name="SettingsPopup" type="WindowDialog" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -172.0
margin_top = -113.0
margin_right = 172.0
margin_bottom = 113.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title" type="Label" parent="SettingsPopup"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -84.0
margin_right = 85.0
margin_bottom = 38.0
text = "Godot Film Maker Settings"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SettingsRow" type="HBoxContainer" parent="SettingsPopup"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -146.0
margin_top = -38.0
margin_right = 146.0
margin_bottom = 38.0
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LabelColumn" type="VBoxContainer" parent="SettingsPopup/SettingsRow"]
margin_left = 20.0
margin_right = 194.0
margin_bottom = 76.0
custom_constants/separation = 10
alignment = 1

[node name="FPS" type="Label" parent="SettingsPopup/SettingsRow/LabelColumn"]
margin_top = 19.0
margin_right = 174.0
margin_bottom = 33.0
text = "FPS (Frames Per Second): "

[node name="CRF" type="Label" parent="SettingsPopup/SettingsRow/LabelColumn"]
margin_top = 43.0
margin_right = 174.0
margin_bottom = 57.0
text = "CRF (Constant Rate Factor): "

[node name="ValueColumn" type="VBoxContainer" parent="SettingsPopup/SettingsRow"]
margin_left = 198.0
margin_right = 272.0
margin_bottom = 76.0
alignment = 1

[node name="FPS_Count" type="SpinBox" parent="SettingsPopup/SettingsRow/ValueColumn"]
margin_top = 40.0
margin_right = 74.0
margin_bottom = 64.0
max_value = 200.0
value = 60.0
rounded = true
align = 1

[node name="CRF_Count" type="SpinBox" parent="SettingsPopup/SettingsRow/ValueColumn"]
margin_top = 12.0
margin_right = 74.0
margin_bottom = 36.0
max_value = 51.0
value = 24.0
rounded = true
align = 1

[node name="Exit_Btn" type="Button" parent="SettingsPopup"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -77.0
margin_top = -28.0
margin_right = 74.0
text = "Confirm Changes"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FramesTimer" type="Timer" parent="."]
one_shot = true

[node name="SaveOutputDialog" type="FileDialog" parent="."]
margin_left = 174.963
margin_top = 119.565
margin_right = 796.963
margin_bottom = 463.565
dialog_text = "Save video output"
mode_overrides_title = false
access = 2
current_dir = "/home/simon"
current_file = "output.mp4"
current_path = "/home/simon/output.mp4"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="Controls/buttons/rec_button" to="." method="_on_rec_button_pressed"]
[connection signal="pressed" from="Controls/buttons/stop_button" to="." method="_on_stop_button_pressed"]
[connection signal="pressed" from="Controls/buttons/play_button" to="." method="_on_play_button_pressed"]
[connection signal="pressed" from="Controls/buttons/pause_button" to="." method="_on_pause_button_pressed"]
[connection signal="pressed" from="Controls/buttons/settings_button" to="." method="_on_settings_button_pressed"]
[connection signal="pressed" from="SettingsPopup/Exit_Btn" to="." method="_on_Exit_Btn_pressed"]
[connection signal="timeout" from="FramesTimer" to="." method="_frame"]
[connection signal="file_selected" from="SaveOutputDialog" to="." method="_on_SaveOutputDialog_file_selected"]
